--- a/enums/_local_.siteservicetype.html
+++ b/enums/_local_.siteservicetype.html
@@ -74,7 +74,6 @@
 						<section class="tsd-index-section ">
 							<h3>Enumeration members</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-enum-member tsd-parent-kind-enum"><a href="_local_.siteservicetype.html#docker_compose" class="tsd-kind-icon">DOCKER_<wbr>COMPOSE</a></li>
 								<li class="tsd-kind-enum-member tsd-parent-kind-enum"><a href="_local_.siteservicetype.html#lightning" class="tsd-kind-icon">LIGHTNING</a></li>
 							</ul>
 						</section>
@@ -84,22 +83,12 @@
 			<section class="tsd-panel-group tsd-member-group ">
 				<h2>Enumeration members</h2>
 				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum">
-					<a name="docker_compose" class="tsd-anchor"></a>
-					<h3>DOCKER_<wbr>COMPOSE</h3>
-					<div class="tsd-signature tsd-kind-icon">DOCKER_<wbr>COMPOSE<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;docker-compose&quot;</span></div>
-					<aside class="tsd-sources">
-						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/7ffd677/index.d.ts#L18">index.d.ts:18</a></li>
-						</ul>
-					</aside>
-				</section>
-				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum">
 					<a name="lightning" class="tsd-anchor"></a>
 					<h3>LIGHTNING</h3>
 					<div class="tsd-signature tsd-kind-icon">LIGHTNING<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;lightning&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/7ffd677/index.d.ts#L17">index.d.ts:17</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/840af1f/index.d.ts#L19">index.d.ts:19</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -113,6 +102,9 @@
 					</li>
 					<li class="current tsd-kind-module">
 						<a href="../modules/_local_.html">&quot;local&quot;</a>
+					</li>
+					<li class=" tsd-kind-module">
+						<a href="../modules/_local_graphql_.html">&quot;local/graphql&quot;</a>
 					</li>
 					<li class=" tsd-kind-module">
 						<a href="../modules/_local_main_.html">&quot;local/main&quot;</a>
@@ -142,9 +134,6 @@
 						<a href="_local_.siteservicetype.html" class="tsd-kind-icon">Site<wbr>Service<wbr>Type</a>
 						<ul>
 							<li class=" tsd-kind-enum-member tsd-parent-kind-enum">
-								<a href="_local_.siteservicetype.html#docker_compose" class="tsd-kind-icon">DOCKER_<wbr>COMPOSE</a>
-							</li>
-							<li class=" tsd-kind-enum-member tsd-parent-kind-enum">
 								<a href="_local_.siteservicetype.html#lightning" class="tsd-kind-icon">LIGHTNING</a>
 							</li>
 						</ul>
@@ -156,9 +145,6 @@
 					</li>
 					<li class=" tsd-kind-interface tsd-parent-kind-module">
 						<a href="../interfaces/_local_.addonpackage.html" class="tsd-kind-icon">Addon<wbr>Package</a>
-					</li>
-					<li class=" tsd-kind-interface tsd-parent-kind-module">
-						<a href="../interfaces/_local_.hostconnection.html" class="tsd-kind-icon">Host<wbr>Connection</a>
 					</li>
 					<li class=" tsd-kind-interface tsd-parent-kind-module">
 						<a href="../interfaces/_local_.iprocessopts.html" class="tsd-kind-icon">IProcess<wbr>Opts</a>
@@ -185,13 +171,16 @@
 						<a href="../modules/_local_.html#autoupdateenabled" class="tsd-kind-icon">Autoupdate<wbr>Enabled</a>
 					</li>
 					<li class=" tsd-kind-type-alias tsd-parent-kind-module">
+						<a href="../modules/_local_.html#hostconnection" class="tsd-kind-icon">Host<wbr>Connection</a>
+					</li>
+					<li class=" tsd-kind-type-alias tsd-parent-kind-module">
 						<a href="../modules/_local_.html#logginglevel" class="tsd-kind-icon">Logging<wbr>Level</a>
 					</li>
 					<li class=" tsd-kind-type-alias tsd-parent-kind-module">
 						<a href="../modules/_local_.html#rolloutpercentage" class="tsd-kind-icon">Rollout<wbr>Percentage</a>
 					</li>
 					<li class=" tsd-kind-type-alias tsd-parent-kind-module">
-						<a href="../modules/_local_.html#sitelivelinkprosettings" class="tsd-kind-icon">Site<wbr>Live<wbr>Link<wbr>Pro<wbr>Settings</a>
+						<a href="../modules/_local_.html#sitebase" class="tsd-kind-icon">Site<wbr>Base</a>
 					</li>
 					<li class=" tsd-kind-type-alias tsd-parent-kind-module">
 						<a href="../modules/_local_.html#siteport" class="tsd-kind-icon">Site<wbr>Port</a>
@@ -231,6 +220,7 @@
 				<li class="tsd-kind-variable"><span class="tsd-kind-icon">Variable</span></li>
 				<li class="tsd-kind-function"><span class="tsd-kind-icon">Function</span></li>
 				<li class="tsd-kind-type-alias"><span class="tsd-kind-icon">Type alias</span></li>
+				<li class="tsd-kind-type-alias tsd-has-type-parameter"><span class="tsd-kind-icon">Type alias with type parameter</span></li>
 			</ul>
 			<ul class="tsd-legend">
 				<li class="tsd-kind-enum"><span class="tsd-kind-icon">Enumeration</span></li>
