--- a/interfaces/_local_main_.iimportdata.html
+++ b/interfaces/_local_main_.iimportdata.html
@@ -102,7 +102,7 @@
 					<div class="tsd-signature tsd-kind-icon">file<wbr>Dir<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/7ffd677/main.d.ts#L692">main.d.ts:692</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/840af1f/main.d.ts#L735">main.d.ts:735</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -112,7 +112,7 @@
 					<div class="tsd-signature tsd-kind-icon">metadata<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">any</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/7ffd677/main.d.ts#L694">main.d.ts:694</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/840af1f/main.d.ts#L737">main.d.ts:737</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -122,7 +122,7 @@
 					<div class="tsd-signature tsd-kind-icon">multi<wbr>Site<wbr>Info<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">any</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/7ffd677/main.d.ts#L690">main.d.ts:690</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/840af1f/main.d.ts#L733">main.d.ts:733</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -132,7 +132,7 @@
 					<div class="tsd-signature tsd-kind-icon">old<wbr>Site<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">any</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/7ffd677/main.d.ts#L691">main.d.ts:691</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/840af1f/main.d.ts#L734">main.d.ts:734</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -142,7 +142,7 @@
 					<div class="tsd-signature tsd-kind-icon">sql<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">any</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/7ffd677/main.d.ts#L693">main.d.ts:693</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/840af1f/main.d.ts#L736">main.d.ts:736</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -152,7 +152,7 @@
 					<div class="tsd-signature tsd-kind-icon">type<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/7ffd677/main.d.ts#L695">main.d.ts:695</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/840af1f/main.d.ts#L738">main.d.ts:738</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -162,7 +162,7 @@
 					<div class="tsd-signature tsd-kind-icon">wp<wbr>Version<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/7ffd677/main.d.ts#L689">main.d.ts:689</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/840af1f/main.d.ts#L732">main.d.ts:732</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -177,6 +177,9 @@
 					<li class=" tsd-kind-module">
 						<a href="../modules/_local_.html">&quot;local&quot;</a>
 					</li>
+					<li class=" tsd-kind-module">
+						<a href="../modules/_local_graphql_.html">&quot;local/graphql&quot;</a>
+					</li>
 					<li class="current tsd-kind-module">
 						<a href="../modules/_local_main_.html">&quot;local/main&quot;</a>
 					</li>
@@ -188,6 +191,9 @@
 			<nav class="tsd-navigation secondary menu-sticky">
 				<ul class="before-current">
 					<li class=" tsd-kind-enum tsd-parent-kind-module">
+						<a href="../enums/_local_main_.jobstatus.html" class="tsd-kind-icon">Job<wbr>Status</a>
+					</li>
+					<li class=" tsd-kind-enum tsd-parent-kind-module">
 						<a href="../enums/_local_main_.lightningserviceplatform.html" class="tsd-kind-icon">Lightning<wbr>Service<wbr>Platform</a>
 					</li>
 					<li class=" tsd-kind-enum tsd-parent-kind-module">
@@ -198,6 +204,9 @@
 					</li>
 					<li class=" tsd-kind-class tsd-parent-kind-module">
 						<a href="../classes/_local_main_.hooksmain.html" class="tsd-kind-icon">Hooks<wbr>Main</a>
+					</li>
+					<li class=" tsd-kind-class tsd-parent-kind-module">
+						<a href="../classes/_local_main_.job.html" class="tsd-kind-icon">Job</a>
 					</li>
 					<li class=" tsd-kind-class tsd-parent-kind-module">
 						<a href="../classes/_local_main_.lightningservice.html" class="tsd-kind-icon">Lightning<wbr>Service</a>
@@ -324,6 +333,7 @@
 				<li class="tsd-kind-variable"><span class="tsd-kind-icon">Variable</span></li>
 				<li class="tsd-kind-function"><span class="tsd-kind-icon">Function</span></li>
 				<li class="tsd-kind-type-alias"><span class="tsd-kind-icon">Type alias</span></li>
+				<li class="tsd-kind-type-alias tsd-has-type-parameter"><span class="tsd-kind-icon">Type alias with type parameter</span></li>
 			</ul>
 			<ul class="tsd-legend">
 				<li class="tsd-kind-interface"><span class="tsd-kind-icon">Interface</span></li>
