--- a/classes/_local_main_.services.livelinksfree.html
+++ b/classes/_local_main_.services.livelinksfree.html
@@ -112,7 +112,7 @@
 							<aside class="tsd-sources">
 								<p>Inherited from <a href="_local_main_.services.livelinks.html">LiveLinks</a>.<a href="_local_main_.services.livelinks.html#getprocesses">getProcesses</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/7ffd677/main.d.ts#L1238">main.d.ts:1238</a></li>
+									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/840af1f/main.d.ts#L1285">main.d.ts:1285</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">any</span></h4>
@@ -130,7 +130,7 @@
 							<aside class="tsd-sources">
 								<p>Inherited from <a href="_local_main_.services.livelinks.html">LiveLinks</a>.<a href="_local_main_.services.livelinks.html#ondestroy">onDestroy</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/7ffd677/main.d.ts#L1243">main.d.ts:1243</a></li>
+									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/840af1f/main.d.ts#L1290">main.d.ts:1290</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -153,7 +153,7 @@
 							<aside class="tsd-sources">
 								<p>Inherited from <a href="_local_main_.services.livelinks.html">LiveLinks</a>.<a href="_local_main_.services.livelinks.html#start">start</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/7ffd677/main.d.ts#L1234">main.d.ts:1234</a></li>
+									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/840af1f/main.d.ts#L1281">main.d.ts:1281</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -177,7 +177,7 @@
 							<aside class="tsd-sources">
 								<p>Inherited from <a href="_local_main_.services.livelinks.html">LiveLinks</a>.<a href="_local_main_.services.livelinks.html#stop">stop</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/7ffd677/main.d.ts#L1236">main.d.ts:1236</a></li>
+									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/840af1f/main.d.ts#L1283">main.d.ts:1283</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -237,6 +237,7 @@
 				<li class="tsd-kind-variable"><span class="tsd-kind-icon">Variable</span></li>
 				<li class="tsd-kind-function"><span class="tsd-kind-icon">Function</span></li>
 				<li class="tsd-kind-type-alias"><span class="tsd-kind-icon">Type alias</span></li>
+				<li class="tsd-kind-type-alias tsd-has-type-parameter"><span class="tsd-kind-icon">Type alias with type parameter</span></li>
 			</ul>
 			<ul class="tsd-legend">
 				<li class="tsd-kind-enum"><span class="tsd-kind-icon">Enumeration</span></li>
