--- a/enums/_local_.siteservicerole.html
+++ b/enums/_local_.siteservicerole.html
@@ -90,7 +90,7 @@
 					<div class="tsd-signature tsd-kind-icon">DATABASE<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;db&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/7ffd677/index.d.ts#L23">index.d.ts:23</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/840af1f/index.d.ts#L24">index.d.ts:24</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -100,7 +100,7 @@
 					<div class="tsd-signature tsd-kind-icon">HTTP<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;http&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/7ffd677/index.d.ts#L22">index.d.ts:22</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/840af1f/index.d.ts#L23">index.d.ts:23</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -110,7 +110,7 @@
 					<div class="tsd-signature tsd-kind-icon">PHP<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;php&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/7ffd677/index.d.ts#L24">index.d.ts:24</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/840af1f/index.d.ts#L25">index.d.ts:25</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -124,6 +124,9 @@
 					</li>
 					<li class="current tsd-kind-module">
 						<a href="../modules/_local_.html">&quot;local&quot;</a>
+					</li>
+					<li class=" tsd-kind-module">
+						<a href="../modules/_local_graphql_.html">&quot;local/graphql&quot;</a>
 					</li>
 					<li class=" tsd-kind-module">
 						<a href="../modules/_local_main_.html">&quot;local/main&quot;</a>
@@ -172,9 +175,6 @@
 						<a href="../interfaces/_local_.addonpackage.html" class="tsd-kind-icon">Addon<wbr>Package</a>
 					</li>
 					<li class=" tsd-kind-interface tsd-parent-kind-module">
-						<a href="../interfaces/_local_.hostconnection.html" class="tsd-kind-icon">Host<wbr>Connection</a>
-					</li>
-					<li class=" tsd-kind-interface tsd-parent-kind-module">
 						<a href="../interfaces/_local_.iprocessopts.html" class="tsd-kind-icon">IProcess<wbr>Opts</a>
 					</li>
 					<li class=" tsd-kind-interface tsd-parent-kind-module">
@@ -199,13 +199,16 @@
 						<a href="../modules/_local_.html#autoupdateenabled" class="tsd-kind-icon">Autoupdate<wbr>Enabled</a>
 					</li>
 					<li class=" tsd-kind-type-alias tsd-parent-kind-module">
+						<a href="../modules/_local_.html#hostconnection" class="tsd-kind-icon">Host<wbr>Connection</a>
+					</li>
+					<li class=" tsd-kind-type-alias tsd-parent-kind-module">
 						<a href="../modules/_local_.html#logginglevel" class="tsd-kind-icon">Logging<wbr>Level</a>
 					</li>
 					<li class=" tsd-kind-type-alias tsd-parent-kind-module">
 						<a href="../modules/_local_.html#rolloutpercentage" class="tsd-kind-icon">Rollout<wbr>Percentage</a>
 					</li>
 					<li class=" tsd-kind-type-alias tsd-parent-kind-module">
-						<a href="../modules/_local_.html#sitelivelinkprosettings" class="tsd-kind-icon">Site<wbr>Live<wbr>Link<wbr>Pro<wbr>Settings</a>
+						<a href="../modules/_local_.html#sitebase" class="tsd-kind-icon">Site<wbr>Base</a>
 					</li>
 					<li class=" tsd-kind-type-alias tsd-parent-kind-module">
 						<a href="../modules/_local_.html#siteport" class="tsd-kind-icon">Site<wbr>Port</a>
@@ -245,6 +248,7 @@
 				<li class="tsd-kind-variable"><span class="tsd-kind-icon">Variable</span></li>
 				<li class="tsd-kind-function"><span class="tsd-kind-icon">Function</span></li>
 				<li class="tsd-kind-type-alias"><span class="tsd-kind-icon">Type alias</span></li>
+				<li class="tsd-kind-type-alias tsd-has-type-parameter"><span class="tsd-kind-icon">Type alias with type parameter</span></li>
 			</ul>
 			<ul class="tsd-legend">
 				<li class="tsd-kind-enum"><span class="tsd-kind-icon">Enumeration</span></li>
