--- a/globals.html
+++ b/globals.html
@@ -69,6 +69,7 @@
 							<h3>Modules</h3>
 							<ul class="tsd-index-list">
 								<li class="tsd-kind-module"><a href="modules/_local_.html" class="tsd-kind-icon">&quot;local&quot;</a></li>
+								<li class="tsd-kind-module"><a href="modules/_local_graphql_.html" class="tsd-kind-icon">&quot;local/graphql&quot;</a></li>
 								<li class="tsd-kind-module"><a href="modules/_local_main_.html" class="tsd-kind-icon">&quot;local/main&quot;</a></li>
 								<li class="tsd-kind-module"><a href="modules/_local_renderer_.html" class="tsd-kind-icon">&quot;local/renderer&quot;</a></li>
 							</ul>
@@ -90,7 +91,7 @@
 					<div class="tsd-signature tsd-kind-icon">Generic<wbr>Object<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">{}</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/7ffd677/index.d.ts#L2">index.d.ts:2</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/840af1f/index.d.ts#L2">index.d.ts:2</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-type-declaration">
@@ -112,6 +113,9 @@
 					</li>
 					<li class=" tsd-kind-module">
 						<a href="modules/_local_.html">&quot;local&quot;</a>
+					</li>
+					<li class=" tsd-kind-module">
+						<a href="modules/_local_graphql_.html">&quot;local/graphql&quot;</a>
 					</li>
 					<li class=" tsd-kind-module">
 						<a href="modules/_local_main_.html">&quot;local/main&quot;</a>
@@ -140,6 +144,7 @@
 				<li class="tsd-kind-variable"><span class="tsd-kind-icon">Variable</span></li>
 				<li class="tsd-kind-function"><span class="tsd-kind-icon">Function</span></li>
 				<li class="tsd-kind-type-alias"><span class="tsd-kind-icon">Type alias</span></li>
+				<li class="tsd-kind-type-alias tsd-has-type-parameter"><span class="tsd-kind-icon">Type alias with type parameter</span></li>
 			</ul>
 			<ul class="tsd-legend">
 				<li class="tsd-kind-enum"><span class="tsd-kind-icon">Enumeration</span></li>
