--- a/index.html
+++ b/index.html
@@ -88,6 +88,9 @@
 						<a href="modules/_local_.html">&quot;local&quot;</a>
 					</li>
 					<li class=" tsd-kind-module">
+						<a href="modules/_local_graphql_.html">&quot;local/graphql&quot;</a>
+					</li>
+					<li class=" tsd-kind-module">
 						<a href="modules/_local_main_.html">&quot;local/main&quot;</a>
 					</li>
 					<li class=" tsd-kind-module">
@@ -114,6 +117,7 @@
 				<li class="tsd-kind-variable"><span class="tsd-kind-icon">Variable</span></li>
 				<li class="tsd-kind-function"><span class="tsd-kind-icon">Function</span></li>
 				<li class="tsd-kind-type-alias"><span class="tsd-kind-icon">Type alias</span></li>
+				<li class="tsd-kind-type-alias tsd-has-type-parameter"><span class="tsd-kind-icon">Type alias with type parameter</span></li>
 			</ul>
 			<ul class="tsd-legend">
 				<li class="tsd-kind-enum"><span class="tsd-kind-icon">Enumeration</span></li>
