--- a/interfaces/_local_main_.services.lightningdbservice.html
+++ b/interfaces/_local_main_.services.lightningdbservice.html
@@ -148,7 +148,7 @@
 							<aside class="tsd-sources">
 								<p>Inherited from <a href="../classes/_local_main_.lightningservice.html">LightningService</a>.<a href="../classes/_local_main_.lightningservice.html#constructor">constructor</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/7ffd677/main.d.ts#L256">main.d.ts:256</a></li>
+									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/840af1f/main.d.ts#L265">main.d.ts:265</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -174,7 +174,7 @@
 					<aside class="tsd-sources">
 						<p>Inherited from <a href="../classes/_local_main_.lightningservice.html">LightningService</a>.<a href="../classes/_local_main_.lightningservice.html#_path">$PATH</a></p>
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/7ffd677/main.d.ts#L381">main.d.ts:381</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/840af1f/main.d.ts#L390">main.d.ts:390</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -194,7 +194,7 @@
 					<aside class="tsd-sources">
 						<p>Inherited from <a href="../classes/_local_main_.lightningservice.html">LightningService</a>.<a href="../classes/_local_main_.lightningservice.html#_paths">$PATHs</a></p>
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/7ffd677/main.d.ts#L374">main.d.ts:374</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/840af1f/main.d.ts#L383">main.d.ts:383</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -222,7 +222,7 @@
 					<aside class="tsd-sources">
 						<p>Inherited from <a href="../classes/_local_main_.lightningservice.html">LightningService</a>.<a href="../classes/_local_main_.lightningservice.html#_lightningservices">_lightningServices</a></p>
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/7ffd677/main.d.ts#L254">main.d.ts:254</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/840af1f/main.d.ts#L263">main.d.ts:263</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -233,7 +233,7 @@
 					<aside class="tsd-sources">
 						<p>Inherited from <a href="../classes/_local_main_.lightningservice.html">LightningService</a>.<a href="../classes/_local_main_.lightningservice.html#_logger">_logger</a></p>
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/7ffd677/main.d.ts#L256">main.d.ts:256</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/840af1f/main.d.ts#L265">main.d.ts:265</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -244,7 +244,7 @@
 					<aside class="tsd-sources">
 						<p>Inherited from <a href="../classes/_local_main_.lightningservice.html">LightningService</a>.<a href="../classes/_local_main_.lightningservice.html#_site">_site</a></p>
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/7ffd677/main.d.ts#L252">main.d.ts:252</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/840af1f/main.d.ts#L261">main.d.ts:261</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -255,7 +255,7 @@
 					<aside class="tsd-sources">
 						<p>Inherited from <a href="../classes/_local_main_.lightningservice.html">LightningService</a>.<a href="../classes/_local_main_.lightningservice.html#bin">bin</a></p>
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/7ffd677/main.d.ts#L347">main.d.ts:347</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/840af1f/main.d.ts#L356">main.d.ts:356</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -275,7 +275,7 @@
 					<aside class="tsd-sources">
 						<p>Inherited from <a href="../classes/_local_main_.lightningservice.html">LightningService</a>.<a href="../classes/_local_main_.lightningservice.html#binversion">binVersion</a></p>
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/7ffd677/main.d.ts#L316">main.d.ts:316</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/840af1f/main.d.ts#L325">main.d.ts:325</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -297,7 +297,7 @@
 					<aside class="tsd-sources">
 						<p>Inherited from <a href="../classes/_local_main_.lightningservice.html">LightningService</a>.<a href="../classes/_local_main_.lightningservice.html#bins">bins</a></p>
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/7ffd677/main.d.ts#L340">main.d.ts:340</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/840af1f/main.d.ts#L349">main.d.ts:349</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -325,7 +325,7 @@
 					<aside class="tsd-sources">
 						<p>Inherited from <a href="../classes/_local_main_.lightningservice.html">LightningService</a>.<a href="../classes/_local_main_.lightningservice.html#configpath">configPath</a></p>
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/7ffd677/main.d.ts#L425">main.d.ts:425</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/840af1f/main.d.ts#L434">main.d.ts:434</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -348,7 +348,7 @@
 					<aside class="tsd-sources">
 						<p>Inherited from <a href="../classes/_local_main_.lightningservice.html">LightningService</a>.<a href="../classes/_local_main_.lightningservice.html#configtemplatepath">configTemplatePath</a></p>
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/7ffd677/main.d.ts#L323">main.d.ts:323</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/840af1f/main.d.ts#L332">main.d.ts:332</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -368,7 +368,7 @@
 					<aside class="tsd-sources">
 						<p>Inherited from <a href="../classes/_local_main_.lightningservice.html">LightningService</a>.<a href="../classes/_local_main_.lightningservice.html#configvariables">configVariables</a></p>
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/7ffd677/main.d.ts#L388">main.d.ts:388</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/840af1f/main.d.ts#L397">main.d.ts:397</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -388,7 +388,7 @@
 					<aside class="tsd-sources">
 						<p>Inherited from <a href="../classes/_local_main_.lightningservice.html">LightningService</a>.<a href="../classes/_local_main_.lightningservice.html#env">env</a></p>
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/7ffd677/main.d.ts#L364">main.d.ts:364</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/840af1f/main.d.ts#L373">main.d.ts:373</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -411,7 +411,7 @@
 					<aside class="tsd-sources">
 						<p>Inherited from <a href="../classes/_local_main_.lightningservice.html">LightningService</a>.<a href="../classes/_local_main_.lightningservice.html#label">label</a></p>
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/7ffd677/main.d.ts#L307">main.d.ts:307</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/840af1f/main.d.ts#L316">main.d.ts:316</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -435,7 +435,7 @@
 					<aside class="tsd-sources">
 						<p>Inherited from <a href="../classes/_local_main_.lightningservice.html">LightningService</a>.<a href="../classes/_local_main_.lightningservice.html#logspath">logsPath</a></p>
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/7ffd677/main.d.ts#L445">main.d.ts:445</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/840af1f/main.d.ts#L454">main.d.ts:454</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -458,7 +458,7 @@
 					<aside class="tsd-sources">
 						<p>Inherited from <a href="../classes/_local_main_.lightningservice.html">LightningService</a>.<a href="../classes/_local_main_.lightningservice.html#port">port</a></p>
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/7ffd677/main.d.ts#L415">main.d.ts:415</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/840af1f/main.d.ts#L424">main.d.ts:424</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -481,7 +481,7 @@
 					<aside class="tsd-sources">
 						<p>Inherited from <a href="../classes/_local_main_.lightningservice.html">LightningService</a>.<a href="../classes/_local_main_.lightningservice.html#ports">ports</a></p>
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/7ffd677/main.d.ts#L406">main.d.ts:406</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/840af1f/main.d.ts#L415">main.d.ts:415</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -504,7 +504,7 @@
 					<aside class="tsd-sources">
 						<p>Inherited from <a href="../classes/_local_main_.lightningservice.html">LightningService</a>.<a href="../classes/_local_main_.lightningservice.html#requiredports">requiredPorts</a></p>
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/7ffd677/main.d.ts#L397">main.d.ts:397</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/840af1f/main.d.ts#L406">main.d.ts:406</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -535,7 +535,7 @@
 					<aside class="tsd-sources">
 						<p>Inherited from <a href="../classes/_local_main_.lightningservice.html">LightningService</a>.<a href="../classes/_local_main_.lightningservice.html#runpath">runPath</a></p>
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/7ffd677/main.d.ts#L435">main.d.ts:435</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/840af1f/main.d.ts#L444">main.d.ts:444</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -558,7 +558,7 @@
 					<aside class="tsd-sources">
 						<p>Inherited from <a href="../classes/_local_main_.lightningservice.html">LightningService</a>.<a href="../classes/_local_main_.lightningservice.html#servicename">serviceName</a></p>
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/7ffd677/main.d.ts#L297">main.d.ts:297</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/840af1f/main.d.ts#L306">main.d.ts:306</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -583,7 +583,7 @@
 					<aside class="tsd-sources">
 						<p>Inherited from <a href="../classes/_local_main_.lightningservice.html">LightningService</a>.<a href="../classes/_local_main_.lightningservice.html#siteconfigtemplatepath">siteConfigTemplatePath</a></p>
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/7ffd677/main.d.ts#L330">main.d.ts:330</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/840af1f/main.d.ts#L339">main.d.ts:339</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -603,7 +603,7 @@
 					<aside class="tsd-sources">
 						<p>Inherited from <a href="../classes/_local_main_.lightningservice.html">LightningService</a>.<a href="../classes/_local_main_.lightningservice.html#siteshellstartupbat">siteShellStartupBat</a></p>
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/7ffd677/main.d.ts#L465">main.d.ts:465</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/840af1f/main.d.ts#L474">main.d.ts:474</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -626,7 +626,7 @@
 					<aside class="tsd-sources">
 						<p>Inherited from <a href="../classes/_local_main_.lightningservice.html">LightningService</a>.<a href="../classes/_local_main_.lightningservice.html#siteshellstartupposix">siteShellStartupPOSIX</a></p>
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/7ffd677/main.d.ts#L455">main.d.ts:455</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/840af1f/main.d.ts#L464">main.d.ts:464</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -649,7 +649,7 @@
 					<aside class="tsd-sources">
 						<p>Inherited from <a href="../classes/_local_main_.lightningservice.html">LightningService</a>.<a href="../classes/_local_main_.lightningservice.html#socket">socket</a></p>
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/7ffd677/main.d.ts#L354">main.d.ts:354</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/840af1f/main.d.ts#L363">main.d.ts:363</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -676,7 +676,7 @@
 							<aside class="tsd-sources">
 								<p>Inherited from <a href="../classes/_local_main_.lightningservice.html">LightningService</a>.<a href="../classes/_local_main_.lightningservice.html#preprovision">preprovision</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/7ffd677/main.d.ts#L476">main.d.ts:476</a></li>
+									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/840af1f/main.d.ts#L485">main.d.ts:485</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -706,7 +706,7 @@
 							<aside class="tsd-sources">
 								<p>Inherited from <a href="../classes/_local_main_.lightningservice.html">LightningService</a>.<a href="../classes/_local_main_.lightningservice.html#provision">provision</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/7ffd677/main.d.ts#L486">main.d.ts:486</a></li>
+									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/840af1f/main.d.ts#L495">main.d.ts:495</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -735,7 +735,7 @@
 							<aside class="tsd-sources">
 								<p>Inherited from <a href="../classes/_local_main_.lightningservice.html">LightningService</a>.<a href="../classes/_local_main_.lightningservice.html#start">start</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/7ffd677/main.d.ts#L491">main.d.ts:491</a></li>
+									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/840af1f/main.d.ts#L500">main.d.ts:500</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -756,7 +756,7 @@
 							<aside class="tsd-sources">
 								<p>Inherited from <a href="../classes/_local_main_.lightningservice.html">LightningService</a>.<a href="../classes/_local_main_.lightningservice.html#stop">stop</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/7ffd677/main.d.ts#L499">main.d.ts:499</a></li>
+									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/840af1f/main.d.ts#L508">main.d.ts:508</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -781,7 +781,7 @@
 							<aside class="tsd-sources">
 								<p>Inherited from <a href="../classes/_local_main_.lightningservice.html">LightningService</a>.<a href="../classes/_local_main_.lightningservice.html#tojson">toJSON</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/7ffd677/main.d.ts#L266">main.d.ts:266</a></li>
+									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/840af1f/main.d.ts#L275">main.d.ts:275</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -805,7 +805,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/7ffd677/main.d.ts#L801">main.d.ts:801</a></li>
+									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/840af1f/main.d.ts#L846">main.d.ts:846</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -943,6 +943,7 @@
 				<li class="tsd-kind-variable"><span class="tsd-kind-icon">Variable</span></li>
 				<li class="tsd-kind-function"><span class="tsd-kind-icon">Function</span></li>
 				<li class="tsd-kind-type-alias"><span class="tsd-kind-icon">Type alias</span></li>
+				<li class="tsd-kind-type-alias tsd-has-type-parameter"><span class="tsd-kind-icon">Type alias with type parameter</span></li>
 			</ul>
 			<ul class="tsd-legend">
 				<li class="tsd-kind-interface"><span class="tsd-kind-icon">Interface</span></li>
