--- a/modules/_local_main_.services.html
+++ b/modules/_local_main_.services.html
@@ -110,7 +110,9 @@
 								<li class="tsd-kind-class tsd-parent-kind-namespace"><a href="../classes/_local_main_.services.downloader.html" class="tsd-kind-icon">Downloader</a></li>
 								<li class="tsd-kind-class tsd-parent-kind-namespace"><a href="../classes/_local_main_.services.errorhandler.html" class="tsd-kind-icon">Error<wbr>Handler</a></li>
 								<li class="tsd-kind-class tsd-parent-kind-namespace"><a href="../classes/_local_main_.services.exportsite.html" class="tsd-kind-icon">Export<wbr>Site</a></li>
+								<li class="tsd-kind-class tsd-parent-kind-namespace"><a href="../classes/_local_main_.services.graphqlservice.html" class="tsd-kind-icon">GraphQLService</a></li>
 								<li class="tsd-kind-class tsd-parent-kind-namespace"><a href="../classes/_local_main_.services.importsite.html" class="tsd-kind-icon">Import<wbr>Site</a></li>
+								<li class="tsd-kind-class tsd-parent-kind-namespace"><a href="../classes/_local_main_.services.jobsservice.html" class="tsd-kind-icon">Jobs<wbr>Service</a></li>
 								<li class="tsd-kind-class tsd-parent-kind-namespace"><a href="../classes/_local_main_.services.lightningservices.html" class="tsd-kind-icon">Lightning<wbr>Services</a></li>
 								<li class="tsd-kind-class tsd-parent-kind-namespace"><a href="../classes/_local_main_.services.livelinks.html" class="tsd-kind-icon">Live<wbr>Links</a></li>
 								<li class="tsd-kind-class tsd-parent-kind-namespace"><a href="../classes/_local_main_.services.livelinksfree.html" class="tsd-kind-icon">Live<wbr>Links<wbr>Free</a></li>
@@ -120,6 +122,7 @@
 								<li class="tsd-kind-class tsd-parent-kind-namespace"><a href="../classes/_local_main_.services.ports.html" class="tsd-kind-icon">Ports</a></li>
 								<li class="tsd-kind-class tsd-parent-kind-namespace"><a href="../classes/_local_main_.services.router.html" class="tsd-kind-icon">Router</a></li>
 								<li class="tsd-kind-class tsd-parent-kind-namespace"><a href="../classes/_local_main_.services.sequelpro.html" class="tsd-kind-icon">Sequel<wbr>Pro</a></li>
+								<li class="tsd-kind-class tsd-parent-kind-namespace"><a href="../classes/_local_main_.services.sitedataservice.html" class="tsd-kind-icon">Site<wbr>Data<wbr>Service</a></li>
 								<li class="tsd-kind-class tsd-parent-kind-namespace"><a href="../classes/_local_main_.services.sitedatabase.html" class="tsd-kind-icon">Site<wbr>Database</a></li>
 								<li class="tsd-kind-class tsd-parent-kind-namespace"><a href="../classes/_local_main_.services.siteprocessmanager.html" class="tsd-kind-icon">Site<wbr>Process<wbr>Manager</a></li>
 								<li class="tsd-kind-class tsd-parent-kind-namespace"><a href="../classes/_local_main_.services.siteprovisioner.html" class="tsd-kind-icon">Site<wbr>Provisioner</a></li>
@@ -166,7 +169,7 @@
 					<div class="tsd-signature tsd-kind-icon">Port<wbr>Allocation<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">{ </span>blacklistedPorts<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">number</span><span class="tsd-signature-symbol">[]</span><span class="tsd-signature-symbol">; </span>ports<span class="tsd-signature-symbol">: </span><span class="tsd-signature-symbol">{}</span><span class="tsd-signature-symbol"> }</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/7ffd677/main.d.ts#L1116">main.d.ts:1116</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/840af1f/main.d.ts#L1163">main.d.ts:1163</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-type-declaration">
@@ -192,7 +195,7 @@
 					<div class="tsd-signature tsd-kind-icon">Port<wbr>Pool<wbr>Allocation<wbr>Request<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">{}</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/7ffd677/main.d.ts#L1112">main.d.ts:1112</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/840af1f/main.d.ts#L1159">main.d.ts:1159</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-type-declaration">
@@ -210,7 +213,7 @@
 					<div class="tsd-signature tsd-kind-icon">Port<wbr>Service<wbr>Allocation<wbr>Request<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">{}</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/7ffd677/main.d.ts#L1108">main.d.ts:1108</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/840af1f/main.d.ts#L1155">main.d.ts:1155</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-type-declaration">
@@ -286,7 +289,13 @@
 						<a href="../classes/_local_main_.services.exportsite.html" class="tsd-kind-icon">Export<wbr>Site</a>
 					</li>
 					<li class=" tsd-kind-class tsd-parent-kind-namespace">
+						<a href="../classes/_local_main_.services.graphqlservice.html" class="tsd-kind-icon">GraphQLService</a>
+					</li>
+					<li class=" tsd-kind-class tsd-parent-kind-namespace">
 						<a href="../classes/_local_main_.services.importsite.html" class="tsd-kind-icon">Import<wbr>Site</a>
+					</li>
+					<li class=" tsd-kind-class tsd-parent-kind-namespace">
+						<a href="../classes/_local_main_.services.jobsservice.html" class="tsd-kind-icon">Jobs<wbr>Service</a>
 					</li>
 					<li class=" tsd-kind-class tsd-parent-kind-namespace">
 						<a href="../classes/_local_main_.services.lightningservices.html" class="tsd-kind-icon">Lightning<wbr>Services</a>
@@ -314,6 +323,9 @@
 					</li>
 					<li class=" tsd-kind-class tsd-parent-kind-namespace">
 						<a href="../classes/_local_main_.services.sequelpro.html" class="tsd-kind-icon">Sequel<wbr>Pro</a>
+					</li>
+					<li class=" tsd-kind-class tsd-parent-kind-namespace">
+						<a href="../classes/_local_main_.services.sitedataservice.html" class="tsd-kind-icon">Site<wbr>Data<wbr>Service</a>
 					</li>
 					<li class=" tsd-kind-class tsd-parent-kind-namespace">
 						<a href="../classes/_local_main_.services.sitedatabase.html" class="tsd-kind-icon">Site<wbr>Database</a>
@@ -398,6 +410,7 @@
 				<li class="tsd-kind-variable"><span class="tsd-kind-icon">Variable</span></li>
 				<li class="tsd-kind-function"><span class="tsd-kind-icon">Function</span></li>
 				<li class="tsd-kind-type-alias"><span class="tsd-kind-icon">Type alias</span></li>
+				<li class="tsd-kind-type-alias tsd-has-type-parameter"><span class="tsd-kind-icon">Type alias with type parameter</span></li>
 			</ul>
 			<ul class="tsd-legend">
 				<li class="tsd-kind-enum"><span class="tsd-kind-icon">Enumeration</span></li>
